cmake_minimum_required(VERSION 3.10)
project(AoC-2021)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(day7 day7/day7.cxx)
add_executable(day8 day8/day8.cxx)
add_executable(day9 day9/day9.cxx)
add_executable(day10 day10/day10.cxx)
add_executable(day11 day11/day11.cxx)
add_executable(day12 day12/day12.cxx)
add_executable(day13 day13/day13.cxx)
